Fix misaligned login form input text alignments

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,12 +1,12 @@
 * {
   color: #fff;
   background-color: #121212;
-  text-align: center;
   box-sizing: border-box;
   font-family: "Roboto";
 }
 
 body {
+  text-align: center;
   font-size: 14px;
 }
 
@@ -22,15 +22,11 @@ input[type="number"]::-webkit-outer-spin-button {
 input[type="number"] {
   /* Remove spinner from number input fields */
   -moz-appearance: textfield;
-}
-
-input[type="text"] {
-  text-align: left;
+  text-align: center;
 }
 
 textarea {
   font-size: 14px;
-  text-align: left;
   overflow: hidden;
   width: 250px;
   height: 45px;
